# safe-pretrain

./: .gitignore  README.md  coding-test.md  environment.yml  pyproject.toml
configs/: pretrain_a6000_smollm2_135m.yaml  sft_qa_smollm2_135m.yaml  synthetic_dataset.yaml  synthetic_pretrain_render.yaml  synthetic_sft_qa.yaml  synthetic_world.yaml
doc/: pretrain_infra.md
scripts/: benchmark_precision.py  create_synthetic_world.py  eval_world.py  launch_pretrain.py  render_synthetic_pretrain.py  run_eval_world.sh  run_pretrain.sh  run_smoke_pretrain.sh  tokenize_dataset.py  tokenize_pretrain.sh  train_pretrain.py
scripts/bash/: create_world.sh  preflight_final_experiments.sh  render_pretrain_data.sh  render_sft_data.sh  render_tokenize_mapping_v2_overlap.sh  render_tokenize_mirror_probe.sh  run_all_final_experiments.sh  run_eval_sft_qa.sh  run_eval_world.sh  run_experiment_pipeline.sh  run_pretrain.sh  run_pretrain_mapping_v2_overlap_wd0p1.sh  run_sft.sh  run_smoke_pretrain.sh  tokenize_pretrain.sh  wait_mapping_v2_overlap_then_pretrain_wd0p1.sh
scripts/python/: benchmark_precision.py  build_synthetic_dataset.py  check_pretrain_checkpoint.py  check_synthetic_artifact.py  create_synthetic_world.py  eval_pretrain_completion.py  eval_sft_qa.py  eval_world.py  launch_pretrain.py  launch_sft.py  render_synthetic_pretrain.py  render_synthetic_sft_qa.py  train_sft.py  (+4 more)
tests/: test_pretrain_checkpoint.py  test_pretrain_completion.py  test_pretrain_render.py  test_runtime.py  test_sft_eval.py  test_sft_render.py  test_synthetic_datasets.py  test_tokenize.py  test_vocab.py
(+60 files in other folders)
