[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safe-pretrain"
version = "0.1.0"
description = "Lightweight infrastructure for SmolLM2-style pretraining experiments."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]
